discussion/kv_engine/128125/128125_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-31101: Basic collection support for getRandomKey

Look for a random key from a collection, not the bucket. As there
is no in-memory index for a collection, we currently iterate through
memory.

This commit only covers the ep-engine side of the change, there is
no way yet for the client to encode a collection into their request,
so for now lock into the default collection.

Change-Id: Ifd45c9504059c5f763067f7472d5ce795b414a0b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-05-14 19:23:52.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-14 19:39:58.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28066/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(6242): error C2653: "Privilege": is not a class or namespace name ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28066/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2190/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:6242:40: error: use of undeclared identifier "Privilege"; did you mean "cb::rbac::Privilege"? [clang-diagnostic-error]
    auto priv = checkPrivilege(cookie, Privilege::Read, cid);
                                       ^~~~~~~~~
                                       cb::rbac::Privilege
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:27:12: note: "cb::rbac::Privilege" declared here
enum class Privilege {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:1532:33: warning: use nullptr [modernize-use-nullptr]
                return GetValue(NULL, ENGINE_UNKNOWN_COLLECTION);
                                ^~~~
                                nullptr

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2190/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:6242:40:
error: use of undeclared identifier "Privilege"; did you mean "cb::rbac::Privilege"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24025/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:6242:40:
error: use of undeclared identifier "Privilege"; did you mean "cb::rbac::Privilege"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24025/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2716/ : FAILURE

Compile error at [2020-05-14T19:26:28.161Z] ../kv_engine/engines/ep/src/ep_engine.cc:6242:40:
error: use of undeclared identifier "Privilege"; did you mean "cb::rbac::Privilege"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2716/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3621/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3621/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3647/ : FAILURE

Compile error at [2020-05-14T19:25:23.277Z] ../kv_engine/engines/ep/src/ep_engine.cc:6242:40:
error: ?Privilege? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3647/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3707/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3707/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11494/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/706/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
